fixed logo clashing with z-index of slider button.

--- a/extension/css/sidepanel.css
+++ b/extension/css/sidepanel.css
@@ -19,6 +19,9 @@
     transition: 0.5s;
 }
 
+#close-button {
+    z-index: 9999;
+}
 .sidePanel a {
     text-decoration: none;
     display: block;
@@ -48,6 +51,7 @@
 .sp_logo {
     margin-bottom: 1rem;
     margin-top: 1rem;
+    z-index: 1;
 }
 
 .sp_logo img {
@@ -93,6 +97,7 @@ figure {
     justify-content: center;
     margin: 0;
     padding: 0;
+    z-index: 1;
 }
 
 .sp_icon img {
